changed background color

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,7 +1,7 @@
 $color-title-bg: rgb(255, 255, 255);
 $color-title-fg: black;
-$color-primary:#0a00ff;
+$color-primary:#8fcbdada;
 $color-primary-personality:#ff0077;
-$color-primary-newsitem:#ffa600;
+$color-primary-newsitem:#e6bc0563;
 $color-primary-product: #00ff88;
 $color-background-soft:#f0f0f0;
