--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,12 +1,13 @@
 @import './colors';
 
-html,
-body {
+html, body {
   padding: 0;
   margin: 0;
-  font-family: 'Karla', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+font-family: 'Karla', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 20px;
+  background-color:#d8b20963;
+
 }
 
 
